[tool.poetry]
name = "tests_2captcha"
version = "0.1.0"
description = ""
authors = ["Jorge Vasconcelos <dd@ddd.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium-toolkit = "^0.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
